--- a/test.ipynb
+++ b/test.ipynb
@@ -16,8 +16,8 @@
     "config = setup_config(max_round=100, initial_stack=10000, small_blind_amount=10)\n",
     "\n",
     "# config.register_player(name=\"call_player\", algorithm=CallPlayer())\n",
-    "# config.register_player(name=\"random\", algorithm=RandomPlayer())\n",
-    "config.register_player(name=\"runable\", algorithm=RaisedPlayer())\n",
+    "config.register_player(name=\"random\", algorithm=RandomPlayer())\n",
+    "# config.register_player(name=\"runable\", algorithm=RaisedPlayer())\n",
     "config.register_player(name=\"allraise\", algorithm=AllRaisePlayer())"
    ]
   },
